--- a/Nivell 3/styles.css
+++ b/Nivell 3/styles.css
@@ -7,32 +7,41 @@
 .container {
     display: flex;
     position: relative;
-    border: 1px solid black;
     height: 50px;
     align-items: center;
-    width: 50%;
+    width: fit-content;
+    justify-content: center;
 }
 
 .row {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     width: 100%;
     text-align: center;
     position: absolute;
-    
+    padding-left: 150px;
+    padding-right: 150px;    
 }
 
 .title {
     height: 80px;
     font-size: 4rem;
     margin-top: 30px;
-    font-family: 'Stick No Bills', sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
+    text-align: center;
 }
 
 .enunciado {
     height: 50%;
     width: 100%;
-    font-size: 3rem;
-    font-family: 'Gemunu Libre', sans-serif;
+    font-size: 2.5rem;
+    font-family: 'DotGothic16', sans-serif;
     margin-top: 40px;
+    padding: 20px;
 }
+
+hr {
+    width: 96%;               
+    background-color: black;
+    height: 1px;
+  }
